[package]
name = "const_irc_message_parser"
version = "0.8.0"
edition = "2021"
rust-version = "1.71" # core::slice::split_at
license = "ISC"
description = "A 0 dependency, no_std, const-only parser for the IRC message protocol."
categories = ["no-std", "no-std::no-alloc", "parser-implementations"]
keywords = ["irc", "parser", "no-std"]
readme = "README.md"
exclude = ["target", "Cargo.lock"]
documentation = "https://docs.rs/const_irc_message_parser"
repository = "https://github.com/auronandace/const_irc_message_parser"
homepage = "https://github.com/auronandace/const_irc_message_parser"

[lib]
name = "const_irc_message_parser"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lints.clippy]
pedantic = "warn"
